examples/test/testpolicy9245.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9245
  namespace: namespace244
spec:
  podSelector:
    matchLabels:
      key46: value27
      key40: value41
      key11: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value2
          key37: value5
      podSelector:
        matchLabels:
          key9: value44
